Fix style issue created by wrapping elements in Link

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,6 +32,7 @@ header {
 
 .logo-name {
   display: flex;
+  color: white;
 }
 
 .logo-name > img {
